# learn-python-dependency-injector

./: README.md  docker-compose.yaml
back/: Dockerfile  Taskfile.yaml  mise.toml  pyproject.toml
back/.devcontainer/: devcontainer.json
back/src/app/: __init__.py  main.py
back/src/app/domain/: __init__.py
back/src/app/domain/task/: __init__.py  task_repository.py
back/src/app/fake/: __init__.py  fake_task_repository.py
back/src/app/infrastructure/: __init__.py
back/src/app/infrastructure/fake/: fake_task_repository.py
back/src/app/models/: __init__.py  task.py  task_repository.py
back/tests/: __init__.py  test_main.py
