[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]

[tool.ruff]
# [https://docs.astral.sh/ruff/configuration/](https://docs.astral.sh/ruff/configuration/) を参考に設定
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# [【Python】Linter・Formatter決定版 Ruffの詳細設定](https://zenn.dev/mutex_inc/articles/4183b992ccd701)  を参考に設定
select = ["ALL"]
ignore = [
    "D213",  # multi-line summary second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5

[tool.mypy]
# [【Python】Linter・Formatter決定版 Ruffの詳細設定](https://zenn.dev/mutex_inc/articles/4183b992ccd701)  を参考に設定
# 基本設定
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# サードパーティライブラリの型チェック
ignore_missing_imports = true

# 特定のモジュールの設定
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
